--- a/bio.html
+++ b/bio.html
@@ -8,11 +8,11 @@
 <body>
   <h1>Student Bio</h1>
   <h2>Kelly Gowing</h2>
-  <img src="Millie.jpg" alt="Millie">
+  <img src="Millie.jpg" alt="Millie" height="300px">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi numquam corporis adipisci eligendi libero possimus quisquam velit. Fugit quo aliquid sequi ipsum illo minus in omnis corporis, obcaecati excepturi autem?</p>
   <h2>Contact Info</h2>
   <ul>
-    <li>Email: kelly.a.gowing@gmail.com</li>
+    <li>Email: <a href="kelly.a.gowing@gmail.com"></a>kelly.a.gowing@gmail.com</li>
     <li>Github: <a href="https://github.com/kelly70ve">Kelly70ve</a></li>
     <li>Portfolio Project: <a href="https://kelly70ve.github.io/">Find Your Puppy Game</a></li>
   </ul>
