added section tags

--- a/bio.html
+++ b/bio.html
@@ -6,15 +6,28 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Student Bio</h1>
-  <h2>Kelly Gowing</h2>
-  <img src="Millie.jpg" alt="Millie" height="400px">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi numquam corporis adipisci eligendi libero possimus quisquam velit. Fugit quo aliquid sequi ipsum illo minus in omnis corporis, obcaecati excepturi autem?</p>
-  <h2>Contact Info</h2>
-  <ul>
-    <li>Email: <a href="mailto:kelly.a.gowing@gmail.com">kelly.a.gowing@gmail.com</a></li>
-    <li>Github: <a href="https://github.com/kelly70ve">Kelly70ve</a></li>
-    <li>Portfolio Project: <a href="https://kelly70ve.github.io/">Find Your Puppy Game</a></li>
-  </ul>
+  <!-- Header -->
+  <header>
+    <h1>Student Bio</h1>
+  </header>
+  <!-- Main Body -->
+  <div>
+    <!-- Section 1: Bio -->
+    <section>
+      <h2>Kelly Gowing</h2>
+      <img src="Millie.jpg" alt="Millie" height="400px">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi numquam corporis adipisci eligendi libero possimus quisquam velit. Fugit quo aliquid sequi ipsum illo minus in omnis corporis, obcaecati excepturi autem?</p>
+      <h2>Contact Info</h2>
+    </section>
+    <!-- Section 2: Contact Info -->
+    <section>
+    <ul>
+      <li>Email: <a href="mailto:kelly.a.gowing@gmail.com">kelly.a.gowing@gmail.com</a></li>
+      <li>Github: <a href="https://github.com/kelly70ve">Kelly70ve</a></li>
+      <li>Portfolio Project: <a href="https://kelly70ve.github.io/">Find Your Puppy Game</a></li>
+    </ul>
+  </section>
+  </div>
+ 
 </body>
 </html>
