--- a/bio.html
+++ b/bio.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header -->
@@ -11,16 +12,17 @@
     <h1>Student Bio</h1>
   </header>
   <!-- Main Body -->
-  <div>
+  <div id="main-body">
     <!-- Section 1: Bio -->
-    <section>
+    <section id="main-bio">
       <h2>Kelly Gowing</h2>
-      <img src="Millie.jpg" alt="Millie" height="400px">
+      <img src="Millie.jpg" alt="Millie" id="bio-img">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi numquam corporis adipisci eligendi libero possimus quisquam velit. Fugit quo aliquid sequi ipsum illo minus in omnis corporis, obcaecati excepturi autem?</p>
-      <h2>Contact Info</h2>
     </section>
+
     <!-- Section 2: Contact Info -->
-    <section>
+    <section id="contact-info">
+    <h2>Contact Info</h2>
     <ul>
       <li>Email: <a href="mailto:kelly.a.gowing@gmail.com">kelly.a.gowing@gmail.com</a></li>
       <li>Github: <a href="https://github.com/kelly70ve">Kelly70ve</a></li>
